# be-socproject/controllers/projectController.js
@@ -193,62 +193,6 @@ module.exports = {
 			}
 		}
 	},
-	getAllProject: async (req, res, next) => {
-		try {
-			const projects = await Project.findAll({
-				include: [
-					{
-						model: User,
-						as: 'user',
-						attributes: ['name', 'profile_image'],
-					},
-					{
-						model: Tools,
-						as: 'tools',
-						attributes: {
-							exclude: ['id', 'createdAt', 'updatedAt'],
-						},
-						through: {
-							model: ProjectTools,
-							as: 'projcetTools',
-							attributes: { exclude: ['createdAt', 'updatedAt'] },
-						},
-					},
-					{
-						model: Categories,
-						as: 'categories',
-						attributes: { exclude: ['id', 'createdAt', 'updatedAt'] },
-					},
-				],
-			});
-
-			if (projects.length > 0) {
-				return res.status(200).json({
-					code: 200,
-					status: 'OK',
-					message: 'All project found',
-					ammount: projects.length,
-					data: projects,
-				});
-			} else {
-				return res.status(404).json({
-					code: 404,
-					status: 'NOT_FOUND',
-					error: {
-						message: 'No project found',
-					},
-				});
-			}
-		} catch (err) {
-			return res.status(500).json({
-				code: 500,
-				status: 'Internal Server Error',
-				error: {
-					message: err.message,
-				},
-			});
-		}
-	},
 	deleteProject: async (req, res, next) => {
 		const { id } = req.body;
 		try {
@@ -439,7 +383,7 @@ module.exports = {
 					{
 						model: Categories,
 						as: 'categories',
-						attributes: { exclude: ['id', 'createdAt', 'updatedAt'] },
+						attributes: { exclude: ['id',  'createdAt', 'updatedAt'] },
 					},
 					{
 						model: ReportCategories,
@@ -610,32 +554,104 @@ module.exports = {
 			});
 		}
 	},
-	searchProjcet: async(req, res ,next) =>{
+	getAllProjectSearch: async(req, res, next) => {
 		try {
-			let search = ""
-
-			if (req.query.search){
-				search = req.query.search
+			let title = "";
+			let category = "";
+			let tool = [];
+			
+			if(req.query.title){
+				title = req.query.title
 			}
-			Project.findAll({
-				where: {
-					title: {[Sequelize.Op.iLike]: `%${search}%`}				
-				},
-				order: [['updatedAt', 'DESC']]
-			}).then((filter) => {
-				if (filter.length == 0) {					
-					return res.status(404).json({
-						code: 404,
-						status: 'Project NOT FOUND'
-					})
-				}else{									
+			if(req.query.category){
+				category = req.query.category
+			}
+			if(req.query.tool){
+				tool = req.query.tool.split(',')
+			}
+
+			if (!req.query) {
+				await Project.findAll({
+					include: [
+						{
+							model: User,
+							as: 'user',
+							attributes: ['name', 'profile_image'],
+						},
+						{
+							model: Tools,
+							as: 'tools',
+							attributes: {
+								exclude: ['id', 'createdAt', 'updatedAt'],
+							},
+							through: {
+								model: ProjectTools,
+								as: 'projcetTools',
+								attributes: { exclude: ['createdAt', 'updatedAt'] },
+							},
+						},
+						{
+							model: Categories,
+							as: 'categories',
+							attributes: { exclude: ['id', 'createdAt', 'updatedAt'] },
+						},
+					]
+				}).then((project) => {
 					return res.status(201).json({
 						code: 201,
 						status: 'Succes Find Project',
-						filter
+						project
 					})
+				})
+			}else{
+				const whereFilter = {
+					[Sequelize.Op.and]: [
+					  {title: {[Sequelize.Op.iLike]: `%${title}%`}},
+					  {"$categories.slug$" : {[Sequelize.Op.iLike]: `%${category}%`}}
+					]
+				  }
+
+				if (tool.length > 0) {
+					whereFilter[Sequelize.Op.and].push({'$tools.slug$': {[Sequelize.Op.in]: tool}})
 				}
-			})
+
+				Project.findAll({
+					include: [					
+						{
+							model: Tools,
+							as: 'tools',
+							attributes: {
+								exclude: ['id', 'createdAt', 'updatedAt'],
+							},
+							through: {
+								model: ProjectTools,
+								as: 'projcetTools',
+								attributes: { exclude: ['createdAt', 'updatedAt'] },
+							},
+						},
+						{
+							model: Categories,
+							as: 'categories',
+							attributes:  ['slug', 'name'],
+						},
+					],
+					where: whereFilter,
+					order: [['updatedAt', 'DESC']]
+				}).then((filter) => {
+					if (filter.length == 0) {					
+						return res.status(404).json({
+							code: 404,
+							status: 'Project NOT FOUND'
+						})
+					}else{									
+						return res.status(201).json({
+							code: 201,
+							status: 'Succes Find Project',
+							filter
+						})
+					}
+				})
+			}
 		} catch (error) {
 			return res.status(500).json({
 				code: 500,
@@ -646,22 +662,114 @@ module.exports = {
 			});
 		}
 	},
-	searchProjectByCatandTool: async(req,res, next) => {
-		try {
-			const {cat, tool} = req.query
-			await Categories.findAll({
-				where: {
+	// getAllProject: async (req, res, next) => {
+	// 	try {
+	// 		const projects = await Project.findAll({
+	// 			include: [
+	// 				{
+	// 					model: User,
+	// 					as: 'user',
+	// 					attributes: ['name', 'profile_image'],
+	// 				},
+	// 				{
+	// 					model: Tools,
+	// 					as: 'tools',
+	// 					attributes: {
+	// 						exclude: ['id', 'createdAt', 'updatedAt'],
+	// 					},
+	// 					through: {
+	// 						model: ProjectTools,
+	// 						as: 'projcetTools',
+	// 						attributes: { exclude: ['createdAt', 'updatedAt'] },
+	// 					},
+	// 				},
+	// 				{
+	// 					model: Categories,
+	// 					as: 'categories',
+	// 					attributes: { exclude: ['id', 'createdAt', 'updatedAt'] },
+	// 				},
+	// 			],
+	// 		});
+
+	// 		if (projects.length > 0) {
+	// 			return res.status(200).json({
+	// 				code: 200,
+	// 				status: 'OK',
+	// 				message: 'All project found',
+	// 				ammount: projects.length,
+	// 				data: projects,
+	// 			});
+	// 		} else {
+	// 			return res.status(404).json({
+	// 				code: 404,
+	// 				status: 'NOT_FOUND',
+	// 				error: {
+	// 					message: 'No project found',
+	// 				},
+	// 			});
+	// 		}
+	// 	} catch (err) {
+	// 		return res.status(500).json({
+	// 			code: 500,
+	// 			status: 'Internal Server Error',
+	// 			error: {
+	// 				message: err.message,
+	// 			},
+	// 		});
+	// 	}
+	// },
+	// searchProjcet: async(req, res ,next) =>{
+	// 	try {
+	// 		let search = ""
+
+	// 		if (req.query.search){
+	// 			search = req.query.search
+	// 		}
+	// 		Project.findAll({
+	// 			where: {
+	// 				title: {[Sequelize.Op.iLike]: `%${search}%`}				
+	// 			},
+	// 			order: [['updatedAt', 'DESC']]
+	// 		}).then((filter) => {
+	// 			if (filter.length == 0) {					
+	// 				return res.status(404).json({
+	// 					code: 404,
+	// 					status: 'Project NOT FOUND'
+	// 				})
+	// 			}else{									
+	// 				return res.status(201).json({
+	// 					code: 201,
+	// 					status: 'Succes Find Project',
+	// 					filter
+	// 				})
+	// 			}
+	// 		})
+	// 	} catch (error) {
+	// 		return res.status(500).json({
+	// 			code: 500,
+	// 			status: 'Internal Server Error',
+	// 			error: {
+	// 				message: error.message,
+	// 			},
+	// 		});
+	// 	}
+	// },
+	// searchProjectByCatandTool: async(req,res, next) => {
+	// 	try {
+		// 		const {cat, tool} = req.query
+	// 		await Categories.findAll({
+	// 			where: {
 					
-				}
-			})
-		} catch (error) {
-			return res.status(500).json({
-				code: 500,
-				status: 'Internal Server Error',
-				error: {
-					message: error.message,
-				},
-			});
-		}
-	}
+	// 			}
+	// 		})
+	// 	} catch (error) {
+	// 		return res.status(500).json({
+	// 			code: 500,
+	// 			status: 'Internal Server Error',
+	// 			error: {
+	// 				message: error.message,
+	// 			},
+	// 		});
+	// 	}
+	// },
 };
